2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/25_ConvFloatInt.deca
// Description:
//    Programme : conv float ints
// Resultats:
//      Programme correcte syntaxiquement 
//
// Historique:
//    cree le 18/01/2024
{
    int x =2;
    float y = (float)(x);
}